# Angel_Night-light

./: .cproject  .gitignore  .project  Angel_Night-light.doxyfile  Angel_Night-light.doxyfile.bak  CMakeLists.txt  FLLibEclipse.doxyfile  README.md  extra_script.py  platformio.ini
CAO/FreeCAD/: Ange_aile.FCStd  Ange_aile.FCStd1  Ange_base.FCStd  Ange_base.FCStd1  Ange_droite.FCStd  Ange_droite.FCStd1  Ange_gauche.FCStd  Ange_gauche.FCStd1  Boitier Elec.FCStd  Boitier Elec.FCStd1  Capot Batterie.FCStd  Capot Batterie.FCStd1  Ecrou M3.FCStd  Ecrou M3.FCStd1  V2_ElecTop.FCStd  V2_ElecTop.FCStd1  V2a_ElecBottom.FCStd  V2a_ElecBottom.FCStd1  Vis CHC M3x20.FCStd  Vis CHC M3x20.FCStd1
CAO/FreeCAD/STL/: Ange_aile.stl  Ange_droite.stl  Ange_gauche.stl  Capot Batterie-BodyPocket.stl  Ecrou M3.stl  PCB.stl  V2_ElecTop-Fusion.stl  V2a_ElecBottom-BodyFillet.stl  V2a_ElecTop-Fusion.stl  Vis CHC M3x20.stl
CAO/OpenSCAD/: Ange-new.scad  Ange.scene
CAO/OpenSCAD/STL/: Ange-Aile.stl  Ange-ElecBottom.stl  Ange-ElecTop.stl  Ange-MouleIntD.stl  Ange-MouleIntG.stl  Ange-new.stl  Ange-test.stl
Doc/: Essais calcul d'angle.ods
Doc/Soft/: inline_umlgraph_cache_all.pu
Doc/Soft/html/: Ange_8cxx.html  Ange_8cxx__incl.map  Ange_8cxx__incl.md5  Light_8cxx.html  Light_8cxx__incl.map  Light_8cxx__incl.md5  Light_8h.html  Light_8h__dep__incl.map  Light_8h__dep__incl.md5  Light_8h__incl.map  Light_8h__incl.md5  Light_8h_source.html  LogiqueFloue_8cxx.html  LogiqueFloue_8cxx__incl.map  LogiqueFloue_8cxx__incl.md5  LogiqueFloue_8h.html  LogiqueFloue_8h__dep__incl.map  LogiqueFloue_8h__dep__incl.md5  LogiqueFloue_8h__incl.map  LogiqueFloue_8h__incl.md5  LogiqueFloue_8h_source.html  adc_8h.html  adc_8h__incl.map  adc_8h__incl.md5  adc_8h_source.html  adc__common__v1_8h.html  adc__common__v1_8h__dep__incl.map  adc__common__v1_8h__dep__incl.md5  adc__common__v1_8h_source.html  adc__common__v1__multi_8h.html  adc__common__v1__multi_8h__incl.map  adc__common__v1__multi_8h__incl.md5  adc__common__v1__multi_8h_source.html  adc__common__v2_8h.html  adc__common__v2_8h_source.html  adc__common__v2__multi_8h.html  adc__common__v2__multi_8h_source.html  adc__common__v2__single_8h.html  adc__common__v2__single_8h_source.html  adxl345_8cxx.html  (+1147 more)
PCB/: PCB-Ange-cache.lib  PCB-Ange.csv  PCB-Ange.kicad_pcb  PCB-Ange.kicad_pcb-bak  PCB-Ange.kicad_prl  PCB-Ange.kicad_pro  PCB-Ange.net  PCB-Ange.pro  PCB-Ange.rar  PCB-Ange.sch  PCB-Ange.sch-bak  PCB-Ange.xml  Perso.lib  fp-info-cache  fp-lib-table  sym-lib-table
PCB/Gerber/: PCB-Ange-B_Cu.gbr  PCB-Ange-B_Mask.gbr  PCB-Ange-B_Paste.gbr  PCB-Ange-B_SilkS.gbr  PCB-Ange-B_Silkscreen.gbr  PCB-Ange-Edge_Cuts.gbr  PCB-Ange-F_Cu.gbr  PCB-Ange-F_Mask.gbr  PCB-Ange-F_Paste.gbr  PCB-Ange-F_SilkS.gbr  PCB-Ange-F_Silkscreen.gbr  PCB-Ange-NPTH-drl-drl_map.gbr  PCB-Ange-NPTH-drl.gbr  PCB-Ange-NPTH-drl_map.gbr  PCB-Ange-NPTH.drl  PCB-Ange-PTH-drl-drl_map.gbr  PCB-Ange-PTH-drl.gbr  PCB-Ange-PTH-drl_map.gbr  PCB-Ange-PTH.drl
PCB/PCB-Ange.pretty/: Keystone_SMD_5230_AAA.kicad_mod  micro_4mm.kicad_mod
compiler/: toolchain-arm-none-eabi.cmake
lib/: CMakeLists.txt
lib/ADXL345/: CMakeLists.txt  adxl345.cxx  adxl345.h
lib/FreeRTOS/: README.txt
lib/Light/: CMakeLists.txt  Light.cxx  Light.h
lib/SysTick/: CMakeLists.txt  sysTick.c  sysTick.h
lib/libopencm3/: CMakeLists.txt  README.txt
src/: Ange.cxx  CMakeLists.txt  FreeRTOSConfig.h  FreeRTOSConfig.h.in
test_projet/: CMakeLists.txt
test_projet/compiler/: toolchain-arm-none-eabi.cmake
test_projet/lib/ADXL345/: CMakeLists.txt  adxl345.cxx
test_projet/lib/Light/: Light.h
test_projet/lib/SysTick/: sysTick.h
test_projet/lib/libopencm3/: CMakeLists.txt
test_projet/src/: CMakeLists.txt  FreeRTOSConfig.h  FreeRTOSConfig.h.in
